fix scrollbar + sort issue

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -647,3 +647,7 @@ a {
     border-radius: 1px;
     border: 2px solid #d4ddd7;
 }
+
+.no-horizontal-scrollbar::-webkit-scrollbar {
+    height: 0 !important;
+}
